--- a/WebContent/templates/cabecalho.xhtml
+++ b/WebContent/templates/cabecalho.xhtml
@@ -6,6 +6,6 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" >
 	
-	<i class="pi pi-home"></i><p:link value="Home" href="./index.jsf" />
+	<i class="pi pi-home"></i><p:link value="PartyMove" href="./index.jsf" />
 	
 </ui:composition>
