--- a/WebContent/templates/menu_esquerdo.xhtml
+++ b/WebContent/templates/menu_esquerdo.xhtml
@@ -7,13 +7,15 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" >
 
 	<h:form>
-		<p:menu style="width:auto" toggleable="true">
-	        
-	        <p:submenu label="Gerenciamento App">
-	            <p:menuitem value="Pessoas" icon="pi pi-user" url="./pag_pessoas.jsf" />
-	            <p:menuitem value="Usuarios" icon="pi pi-refresh"/>
-	        </p:submenu>
-	        
+		<p:menu style="width:auto" toggleable="true">    
+	        <p:submenu label="Gerenciamento Admin">
+	            <p:menuitem value="viagem" icon="pi pi-star" url="./pag_viagem.jsf" />
+	            <p:menuitem value="cliente" icon="pi pi-star" url="./pag_cliente.jsf" />
+	            <p:menuitem value="motorista" icon="pi pi-star" url="./pag_motorista.jsf" />
+	            <p:menuitem value="locadora" icon="pi pi-star" url="./pag_locadora.jsf" />
+	            <p:menuitem value="automovel" icon="pi pi-star" url="./pag_automovel.jsf" />    
+	            <p:menuitem value="Atualizar Pagina" icon="pi pi-refresh"/>
+	        </p:submenu> 
 	    </p:menu>
 	</h:form>
 	
