--- a/WebContent/templates/template.xhtml
+++ b/WebContent/templates/template.xhtml
@@ -10,7 +10,7 @@
 		<meta charset="ISO-8859-1" />
 		<h:outputStylesheet library="css" name="css.css" />
 		<h:outputStylesheet library="primefaces" name="primeicons/primeicons.css" />
-		<title>..::Aula de Exemplo Templates::..</title>
+		<title>projeto</title>
 		
 	</h:head>
 	<h:body id="corpoPaginaPrincipal">
@@ -19,15 +19,15 @@
 	
 		<p:layout fullPage="true">
 		
-		    <p:layoutUnit position="north" size="70" resizable="false" closable="false" collapsible="false">
+		    <p:layoutUnit position="north" size="50" resizable="false" closable="false" collapsible="false">
 		        <ui:insert name="cabecalho" />
 		    </p:layoutUnit>
 		
-		    <p:layoutUnit position="south" size="40" resizable="false" closable="false" collapsible="false">
+		    <p:layoutUnit position="south" size="50" resizable="false" closable="false" collapsible="false">
 		        <ui:insert name="rodape" />
 		    </p:layoutUnit>
 		
-		    <p:layoutUnit position="west" size="200" resizable="false" closable="false" collapsible="false">
+		    <p:layoutUnit position="west" size="250" resizable="false" closable="false" collapsible="false">
 		        <ui:insert name="menu_esquerdo" />
 		    </p:layoutUnit>
 		
