--- a/WebContent/templates/rodape.xhtml
+++ b/WebContent/templates/rodape.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" >
 	
-	<p:outputLabel value="Copyright@Thiago Giannini Ramos / Unilasalle-RJ | "/>
+	<p:outputLabel value="Copyright@Iago Albuquerque F Rodrigues / Unilasalle-RJ | "/>
 	<p:clock pattern="HH:mm:ss dd.MM.yyyy" mode="server" />
 	
 </ui:composition>
